--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,8 @@
+.MuiAppBar-colorPrimary {
+    background-color: #283346 !important;
+    padding-top: 10px;
+}
+
 .MuiContainer-root {
     display: flex;
     flex-wrap: nowrap;
@@ -14,12 +19,7 @@
     width: 100%;
 }
 
+.PrivateTabIndicator-colorSecondary-7 {
+    background-color: #f5aa00 !important;
+}
 
-
-// .right_btn {
-//     margin-right: 100px;
-// }
-
-// .left_btn {
-//     margin-left: 100px;
-// }
